test: restructure `ConfluenceHttpClientAdapter`