@@ -3,7 +3,6 @@ package pro.softcom.sentinelle.infrastructure.confluence.adapter.out;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -14,7 +13,6 @@ import java.lang.reflect.Field;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
@@ -22,18 +20,17 @@ import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import pro.softcom.sentinelle.domain.confluence.ConfluencePage;
 import pro.softcom.sentinelle.domain.confluence.ConfluenceSpace;
-import pro.softcom.sentinelle.domain.confluence.ModifiedAttachmentInfo;
-import pro.softcom.sentinelle.domain.confluence.ModifiedPageInfo;
 import pro.softcom.sentinelle.infrastructure.confluence.adapter.out.config.ConfluenceConfig;
 
 /**
- * Unit tests for ConfluenceServiceImpl.
- * Uses SoftAssertions, AssertJ and Mockito to test service methods.
+ * Tests des scénarios "happy path" de haut niveau pour ConfluenceHttpClientAdapter.
+ * 
+ * Portée: récupération simple de pages, espaces, recherches basiques sans cas d'erreur complexe.
+ * Les tests spécialisés (erreurs, pagination, retry, etc.) sont dans des classes dédiées.
  */
 @ExtendWith(MockitoExtension.class)
 class ConfluenceHttpClientAdapterTest {
@@ -63,8 +60,6 @@ class ConfluenceHttpClientAdapterTest {
         lenient().when(connectionSettings.readTimeout()).thenReturn(10000);
         lenient().when(connectionSettings.maxRetries()).thenReturn(3);
         lenient().when(config.connectionSettings()).thenReturn(connectionSettings);
-        // The service uses scalar methods from ConfluenceConnectionConfig contract,
-        // so these values must be stubbed directly on the main mock
         lenient().when(config.connectTimeout()).thenReturn(5000);
         lenient().when(config.readTimeout()).thenReturn(10000);
         lenient().when(config.maxRetries()).thenReturn(3);
@@ -74,7 +69,6 @@ class ConfluenceHttpClientAdapterTest {
         lenient().when(paginationSettings.pagesLimit()).thenReturn(50);
         lenient().when(paginationSettings.maxPages()).thenReturn(100);
         lenient().when(config.paginationSettings()).thenReturn(paginationSettings);
-        // Corresponding scalar methods used by the adapter
         lenient().when(config.pagesLimit()).thenReturn(50);
         lenient().when(config.maxPages()).thenReturn(100);
 
@@ -91,7 +85,6 @@ class ConfluenceHttpClientAdapterTest {
             "permissions,metadata"
         );
         lenient().when(config.apiPaths()).thenReturn(apiPaths);
-        // And direct stubs of scalar getters used by the adapter
         lenient().when(config.contentPath()).thenReturn(apiPaths.contentPath());
         lenient().when(config.searchContentPath()).thenReturn(apiPaths.searchContentPath());
         lenient().when(config.spacePath()).thenReturn(apiPaths.spacePath());
@@ -117,16 +110,14 @@ class ConfluenceHttpClientAdapterTest {
     }
 
     @Test
-    void getPage_ReturnsPage_WhenPageExists() throws Exception {
+    void Should_ReturnPage_When_PageExists() throws Exception {
         // Arrange
         String pageId = "123456";
         String pageTitle = "Test Page";
         String pageContent = "<p>Test content</p>";
 
-        // Create JSON response for a page
         String responseBody = createPageJson(pageId, pageTitle, "TEST", pageContent);
 
-        // Configure HTTP response
         when(httpResponse.statusCode()).thenReturn(200);
         when(httpResponse.body()).thenReturn(responseBody);
 
@@ -144,58 +135,20 @@ class ConfluenceHttpClientAdapterTest {
         softly.assertThat(page.spaceKey()).isEqualTo("TEST");
         softly.assertThat(page.content().body()).isEqualTo(pageContent);
 
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/content/" + pageId)
-            .contains("expand=body.storage,version,metadata,ancestors");
-
         softly.assertAll();
     }
 
     @Test
-    void getPage_ReturnsEmpty_WhenPageDoesNotExist() throws Exception {
-        // Arrange
-        String pageId = "nonexistent";
-
-        // Configure the HTTP response for a page not found
-        when(httpResponse.statusCode()).thenReturn(404);
-
-        // Act
-        CompletableFuture<Optional<ConfluencePage>> result = confluenceService.getPage(pageId);
-        Optional<ConfluencePage> pageOpt = result.get();
-
-        // Assert
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pageOpt).isEmpty();
-
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/content/" + pageId);
-
-        softly.assertAll();
-    }
-
-    @Test
-    void searchPages_ReturnsPages_WhenPagesExist() throws Exception {
+    void Should_ReturnPages_When_SearchingInSpace() throws Exception {
         // Arrange
         String spaceKey = "TEST";
         String query = "test";
 
-        // Create a JSON response for a search
         String responseBody = createSearchResultJson(List.of(
             new TestPage("page1", "Page 1", spaceKey, "<p>Content 1</p>"),
             new TestPage("page2", "Page 2", spaceKey, "<p>Content 2</p>")
         ));
 
-        // Configure the HTTP response
         when(httpResponse.statusCode()).thenReturn(200);
         when(httpResponse.body()).thenReturn(responseBody);
 
@@ -215,70 +168,19 @@ class ConfluenceHttpClientAdapterTest {
         softly.assertThat(pages.get(1).title()).isEqualTo("Page 2");
         softly.assertThat(pages.get(1).spaceKey()).isEqualTo(spaceKey);
 
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/content/search")
-            .contains("cql=")
-            .contains("space%3D%27" + spaceKey + "%27")
-            .contains("text+%7E+%27" + query + "%27");
-
         softly.assertAll();
     }
 
     @Test
-    void searchPages_CallsGetAllPagesInSpace_WhenQueryIsEmpty() throws Exception {
+    void Should_ReturnAllPages_When_RetrievingFromSpace() throws Exception {
         // Arrange
         String spaceKey = "TEST";
-        String query = "";
 
-        // Create a JSON response for getAllPagesInSpace
         String responseBody = createSpaceContentJson(List.of(
             new TestPage("page1", "Page 1", spaceKey, "<p>Content 1</p>"),
             new TestPage("page2", "Page 2", spaceKey, "<p>Content 2</p>")
         ));
 
-        // Configure the HTTP response
-        when(httpResponse.statusCode()).thenReturn(200);
-        when(httpResponse.body()).thenReturn(responseBody);
-
-        // Act
-        CompletableFuture<List<ConfluencePage>> result = confluenceService.searchPages(spaceKey, query);
-        List<ConfluencePage> pages = result.get();
-
-        // Assert
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).hasSize(2);
-
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space/" + spaceKey + "/content")
-            .contains("expand=version")
-            .contains("limit=")
-            .contains("start=");
-
-        softly.assertAll();
-    }
-
-    @Test
-    void getAllPagesInSpace_ReturnsPages_WhenPagesExist() throws Exception {
-        // Arrange
-        String spaceKey = "TEST";
-
-        // Create a JSON response for getAllPagesInSpace
-        String responseBody = createSpaceContentJson(List.of(
-            new TestPage("page1", "Page 1", spaceKey, "<p>Content 1</p>"),
-            new TestPage("page2", "Page 2", spaceKey, "<p>Content 2</p>")
-        ));
-
-        // Configure the HTTP response
         when(httpResponse.statusCode()).thenReturn(200);
         when(httpResponse.body()).thenReturn(responseBody);
 
@@ -290,7 +192,7 @@ class ConfluenceHttpClientAdapterTest {
         SoftAssertions softly = new SoftAssertions();
         softly.assertThat(pages).hasSize(2);
 
-        softly.assertThat(pages.get(0).id()).isEqualTo("page1");
+        softly.assertThat(pages.getFirst().id()).isEqualTo("page1");
         softly.assertThat(pages.get(0).title()).isEqualTo("Page 1");
         softly.assertThat(pages.get(0).spaceKey()).isEqualTo(spaceKey);
 
@@ -298,31 +200,18 @@ class ConfluenceHttpClientAdapterTest {
         softly.assertThat(pages.get(1).title()).isEqualTo("Page 2");
         softly.assertThat(pages.get(1).spaceKey()).isEqualTo(spaceKey);
 
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space/" + spaceKey + "/content")
-            .contains("expand=version")
-            .contains("limit=")
-            .contains("start=");
-
         softly.assertAll();
     }
 
     @Test
-    void getSpace_ReturnsSpace_WhenSpaceExists() throws Exception {
+    void Should_ReturnSpace_When_SpaceExists() throws Exception {
         // Arrange
         String spaceKey = "TEST";
         String spaceName = "Test Space";
         String spaceDescription = "This is a test space";
 
-        // Create a JSON response for un espace
         String responseBody = createSpaceJson(spaceKey, spaceName, spaceDescription);
 
-        // Configure the HTTP response
         when(httpResponse.statusCode()).thenReturn(200);
         when(httpResponse.body()).thenReturn(responseBody);
 
@@ -339,136 +228,17 @@ class ConfluenceHttpClientAdapterTest {
         softly.assertThat(space.name()).isEqualTo(spaceName);
         softly.assertThat(space.description()).isEqualTo(spaceDescription);
 
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space/" + spaceKey)
-            .contains("expand=permissions,metadata");
-
         softly.assertAll();
     }
 
     @Test
-    void getSpace_ReturnsEmpty_WhenSpaceDoesNotExist() throws Exception {
+    void Should_ReturnAllSpaces_When_RetrievingSpaces() throws Exception {
         // Arrange
-        String spaceKey = "NONEXISTENT";
-
-        // Configure the HTTP response for a space non trouvé
-        when(httpResponse.statusCode()).thenReturn(404);
-
-        // Act
-        CompletableFuture<Optional<ConfluenceSpace>> result = confluenceService.getSpace(spaceKey);
-        Optional<ConfluenceSpace> spaceOpt = result.get();
-
-        // Assert
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(spaceOpt).isEmpty();
-
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space/" + spaceKey);
-
-        softly.assertAll();
-    }
-
-    @Test
-    void testConnection_ReturnsTrue_WhenConnectionSucceeds() throws Exception {
-        // Arrange
-        // Configure the HTTP response for a successful connection
-        when(httpResponse.statusCode()).thenReturn(200);
-
-        // Act
-        CompletableFuture<Boolean> result = confluenceService.testConnection();
-        boolean isConnected = result.get();
-
-        // Assert
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(isConnected).isTrue();
-
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space");
-
-        softly.assertAll();
-    }
-
-    @Test
-    void testConnection_ReturnsFalse_WhenConnectionFails() throws Exception {
-        // Arrange
-        // Configure the HTTP response for a failed connection
-        when(httpResponse.statusCode()).thenReturn(500);
-
-        // Create a new config with maxRetries=0 for this test
-        var testConfig = mock(ConfluenceConfig.class);
-        lenient().when(testConfig.baseUrl()).thenReturn("https://confluence.test.com");
-        lenient().when(testConfig.getRestApiUrl()).thenReturn("https://confluence.test.com/rest/api");
-        lenient().when(testConfig.username()).thenReturn("testuser");
-        lenient().when(testConfig.apiToken()).thenReturn("testtoken");
-        lenient().when(testConfig.connectTimeout()).thenReturn(5000);
-        lenient().when(testConfig.readTimeout()).thenReturn(10000);
-        lenient().when(testConfig.maxRetries()).thenReturn(0); // No retry
-        lenient().when(testConfig.pagesLimit()).thenReturn(50);
-        lenient().when(testConfig.maxPages()).thenReturn(100);
-        lenient().when(testConfig.contentPath()).thenReturn("/content/");
-        lenient().when(testConfig.searchContentPath()).thenReturn("/content/search");
-        lenient().when(testConfig.spacePath()).thenReturn("/space");
-        lenient().when(testConfig.attachmentChildSuffix()).thenReturn("/child/attachment");
-        lenient().when(testConfig.defaultPageExpands()).thenReturn("body.storage,version,metadata,ancestors");
-        lenient().when(testConfig.defaultSpaceExpands()).thenReturn("permissions,metadata");
-
-        // Create a new adapter with maxRetries=0
-        final ObjectMapper objectMapper = new ObjectMapper();
-        var testService = new ConfluenceHttpClientAdapter(testConfig, objectMapper);
-
-        // Inject the mocked HttpClient into HttpRetryExecutor via reflection
-        Field retryExecutorField = ConfluenceHttpClientAdapter.class.getDeclaredField("retryExecutor");
-        retryExecutorField.setAccessible(true);
-        Object retryExecutor = retryExecutorField.get(testService);
-        
-        Field retryExecutorHttpClientField = retryExecutor.getClass().getDeclaredField("httpClient");
-        retryExecutorHttpClientField.setAccessible(true);
-        retryExecutorHttpClientField.set(retryExecutor, httpClient);
-
-        // Act
-        CompletableFuture<Boolean> result = testService.testConnection();
-        boolean isConnected = result.get();
-
-        // Assert
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(isConnected).isFalse();
-
-        // Verify that the HTTP request was sent correctly (une seule fois, No retry)
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space");
-
-        softly.assertAll();
-    }
-
-    @Test
-    void getAllSpaces_ReturnsSpaces_WhenSpacesExist() throws Exception {
-        // Arrange
-        // Create a JSON response for une liste of spaces
         String responseBody = createSpacesResponseJson(List.of(
             new TestSpace("SPACE1", "Space 1", "Description 1"),
             new TestSpace("SPACE2", "Space 2", "Description 2")
         ));
 
-        // Configure the HTTP response
         when(httpResponse.statusCode()).thenReturn(200);
         when(httpResponse.body()).thenReturn(responseBody);
 
@@ -480,7 +250,7 @@ class ConfluenceHttpClientAdapterTest {
         SoftAssertions softly = new SoftAssertions();
         softly.assertThat(spaces).hasSize(2);
 
-        softly.assertThat(spaces.get(0).key()).isEqualTo("SPACE1");
+        softly.assertThat(spaces.getFirst().key()).isEqualTo("SPACE1");
         softly.assertThat(spaces.get(0).name()).isEqualTo("Space 1");
         softly.assertThat(spaces.get(0).description()).isEqualTo("Description 1");
 
@@ -488,27 +258,17 @@ class ConfluenceHttpClientAdapterTest {
         softly.assertThat(spaces.get(1).name()).isEqualTo("Space 2");
         softly.assertThat(spaces.get(1).description()).isEqualTo("Description 2");
 
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
-
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/space")
-            .contains("expand=permissions,metadata");
-
         softly.assertAll();
     }
 
     @Test
-    void updatePage_ReturnsUpdatedPage_WhenUpdateSucceeds() throws Exception {
+    void Should_ReturnUpdatedPage_When_UpdateSucceeds() throws Exception {
         // Arrange
         String pageId = "page-123";
         String pageTitle = "Updated Test Page";
         String spaceKey = "TEST";
         String pageContent = "<p>Updated test content</p>";
 
-        // Create the page to update
         ConfluencePage pageToUpdate = ConfluencePage.builder()
             .id(pageId)
             .title(pageTitle)
@@ -516,10 +276,8 @@ class ConfluenceHttpClientAdapterTest {
             .content(new ConfluencePage.HtmlContent(pageContent))
             .build();
 
-        // Create a JSON response for an updated page
         String responseBody = createPageJson(pageId, pageTitle, spaceKey, pageContent);
 
-        // Configure the HTTP response
         when(httpResponse.statusCode()).thenReturn(200);
         when(httpResponse.body()).thenReturn(responseBody);
 
@@ -534,14 +292,21 @@ class ConfluenceHttpClientAdapterTest {
         softly.assertThat(updatedPage.spaceKey()).isEqualTo(spaceKey);
         softly.assertThat(updatedPage.content().body()).isEqualTo(pageContent);
 
-        // Verify that the HTTP request was sent correctly
-        ArgumentCaptor<HttpRequest> requestCaptor = ArgumentCaptor.forClass(HttpRequest.class);
-        verify(httpClient).sendAsync(requestCaptor.capture(), any());
+        softly.assertAll();
+    }
 
-        HttpRequest capturedRequest = requestCaptor.getValue();
-        softly.assertThat(capturedRequest.uri().toString())
-            .contains("/content/" + pageId);
-        softly.assertThat(capturedRequest.method()).isEqualTo("PUT");
+    @Test
+    void Should_ReturnTrue_When_ConnectionSucceeds() throws Exception {
+        // Arrange
+        when(httpResponse.statusCode()).thenReturn(200);
+
+        // Act
+        CompletableFuture<Boolean> result = confluenceService.testConnection();
+        boolean isConnected = result.get();
+
+        // Assert
+        SoftAssertions softly = new SoftAssertions();
+        softly.assertThat(isConnected).isTrue();
 
         softly.assertAll();
     }
@@ -642,7 +407,6 @@ class ConfluenceHttpClientAdapterTest {
         spaceNode.put("type", "global");
         spaceNode.put("status", "current");
 
-        // Create the correct description structure
         ObjectNode descriptionNode = JsonNodeFactory.instance.objectNode();
         ObjectNode plainNode = JsonNodeFactory.instance.objectNode();
         plainNode.put("value", description);
@@ -670,7 +434,6 @@ class ConfluenceHttpClientAdapterTest {
             spaceNode.put("type", "global");
             spaceNode.put("status", "current");
 
-            // Create the correct description structure
             ObjectNode descriptionNode = JsonNodeFactory.instance.objectNode();
             ObjectNode plainNode = JsonNodeFactory.instance.objectNode();
             plainNode.put("value", space.description());
@@ -691,480 +454,5 @@ class ConfluenceHttpClientAdapterTest {
         rootNode.put("size", spaces.size());
 
         return rootNode.toString();
-    }
-
-    @Test
-    void getPage_ReturnsEmpty_When_ParseError() throws Exception {
-        String pageId = "123";
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{invalid");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        Optional<ConfluencePage> opt = confluenceService.getPage(pageId).get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(opt).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void searchPages_ReturnsEmpty_When_Non200() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(500);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        List<ConfluencePage> list = confluenceService.searchPages("TEST", "query").get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(list).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void searchPages_ReturnsEmpty_When_ParseError() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{invalid");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        List<ConfluencePage> list = confluenceService.searchPages("TEST", "query").get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(list).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void getAllPagesInSpace_ReturnsEmpty_When_ParseError() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{not-json");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        List<ConfluencePage> pages = confluenceService.getAllPagesInSpace("TEST").get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void getAllPagesInSpace_ReturnsEmpty_When_MissingPageNode() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{} ");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        List<ConfluencePage> pages = confluenceService.getAllPagesInSpace("TEST").get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void getAllSpaces_ReturnsEmpty_When_Non200() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(500);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        List<ConfluenceSpace> spaces = confluenceService.getAllSpaces().get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(spaces).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void getAllSpaces_ReturnsEmpty_When_ParseError() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{invalid");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        List<ConfluenceSpace> spaces = confluenceService.getAllSpaces().get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(spaces).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void updatePage_ShouldThrow_When_Non200() {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(409);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        ConfluencePage page = ConfluencePage.builder()
-            .id("idx").title("T").spaceKey("TEST")
-            .content(new ConfluencePage.HtmlContent("<p>x</p>")).build();
-        try {
-            confluenceService.updatePage(page).join();
-        } catch (java.util.concurrent.CompletionException ce) {
-            SoftAssertions softly = new SoftAssertions();
-            softly.assertThat(ce.getCause()).isInstanceOf(ConfluenceApiException.class);
-            softly.assertAll();
-        }
-    }
-
-    @Test
-    void getSpace_ReturnsEmpty_When_ParseError() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{invalid");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-        Optional<ConfluenceSpace> opt = confluenceService.getSpace("KEY").get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(opt).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void getSpaceById_Success_ParseError_And_Non200() throws Exception {
-        var ok = mock(HttpResponse.class);
-        when(ok.statusCode()).thenReturn(200);
-        when(ok.body()).thenReturn(createSpaceJson("S1", "Space1", "desc"));
-        var badJson = mock(HttpResponse.class);
-        when(badJson.statusCode()).thenReturn(200);
-        when(badJson.body()).thenReturn("{invalid");
-        var notOk = mock(HttpResponse.class);
-        when(notOk.statusCode()).thenReturn(404);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(ok))
-            .thenReturn(CompletableFuture.completedFuture(badJson))
-            .thenReturn(CompletableFuture.completedFuture(notOk));
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(confluenceService.getSpaceById("S1").get()).isPresent();
-        softly.assertThat(confluenceService.getSpaceById("S1").get()).isEmpty();
-        softly.assertThat(confluenceService.getSpaceById("S1").get()).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void getPage_ShouldRetryOn500_ThenSucceed() throws Exception {
-        // Ensure only 1 retry to speed up the test
-        lenient().when(config.maxRetries()).thenReturn(1);
-        var r500 = mock(HttpResponse.class);
-        when(r500.statusCode()).thenReturn(500);
-        var r200 = mock(HttpResponse.class);
-        when(r200.statusCode()).thenReturn(200);
-        when(r200.body()).thenReturn(createPageJson("id-9", "T", "TEST", "<p>x</p>"));
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r500))
-            .thenReturn(CompletableFuture.completedFuture(r200));
-        Optional<ConfluencePage> opt = confluenceService.getPage("id-9").get();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(opt).isPresent();
-        softly.assertAll();
-    }
-
-    @Test
-    void testConnection_ReturnsFalse_When_ExceptionallyFailed() {
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.failedFuture(new RuntimeException("boom")));
-        boolean ok = confluenceService.testConnection().join();
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(ok).isFalse();
-        softly.assertAll();
-    }
-
-    // ---- Helpers for modified content (pages and attachments) ----
-    private String createCqlModifiedPagesJson(ObjectNode... items) {
-        ObjectNode root = JsonNodeFactory.instance.objectNode();
-        ArrayNode results = JsonNodeFactory.instance.arrayNode();
-        for (ObjectNode n : items) { results.add(n); }
-        root.set("results", results);
-        root.put("size", results.size());
-        return root.toString();
-    }
-
-    private String createCqlModifiedAttachmentsJson(ObjectNode... items) {
-        return createCqlModifiedPagesJson(items);
-    }
-
-    private ObjectNode pageResultNode(String id, String title, String type, String versionWhen, String historyWhen) {
-        ObjectNode node = JsonNodeFactory.instance.objectNode();
-        if (id != null) node.put("id", id);
-        if (title != null) node.put("title", title);
-        if (type != null) node.put("type", type);
-        if (versionWhen != null) {
-            ObjectNode version = JsonNodeFactory.instance.objectNode();
-            version.put("when", versionWhen);
-            node.set("version", version);
-        }
-        if (historyWhen != null) {
-            ObjectNode history = JsonNodeFactory.instance.objectNode();
-            ObjectNode lastUpdated = JsonNodeFactory.instance.objectNode();
-            lastUpdated.put("when", historyWhen);
-            history.set("lastUpdated", lastUpdated);
-            node.set("history", history);
-        }
-        return node;
-    }
-
-    // ---- Tests for modified pages ----
-    @Test
-    void Should_ReturnModifiedPages_When_CqlReturnsVersionWhenDates() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        String json = createCqlModifiedPagesJson(
-            pageResultNode("p1", "Title 1", "page", "2025-01-02T03:04:05Z", null),
-            pageResultNode("p2", "Title 2", "page", "2025-01-03T04:05:06Z", null)
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).hasSize(2);
-        softly.assertThat(pages.get(0).pageId()).isEqualTo("p1");
-        softly.assertThat(pages.get(0).title()).isEqualTo("Title 1");
-        softly.assertThat(pages.get(0).lastModified()).isEqualTo(Instant.parse("2025-01-02T03:04:05Z"));
-        softly.assertThat(pages.get(1).pageId()).isEqualTo("p2");
-        softly.assertThat(pages.get(1).title()).isEqualTo("Title 2");
-        softly.assertThat(pages.get(1).lastModified()).isEqualTo(Instant.parse("2025-01-03T04:05:06Z"));
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_UseHistoryFallback_When_VersionWhenMissing() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        String json = createCqlModifiedPagesJson(
-            pageResultNode("p3", "T3", "page", null, "2025-02-01T10:00:00Z")
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).hasSize(1);
-        softly.assertThat(pages.get(0).pageId()).isEqualTo("p3");
-        softly.assertThat(pages.get(0).lastModified()).isEqualTo(Instant.parse("2025-02-01T10:00:00Z"));
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_FilterOutInvalidEntries_When_WrongTypeMissingIdOrUnparsableDate() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        String json = createCqlModifiedPagesJson(
-            pageResultNode("p4", null, "page", "2025-03-01T00:00:00Z", null),
-            pageResultNode(null, "NoId", "page", "2025-03-02T00:00:00Z", null),
-            pageResultNode("pX", "BadDate", "page", "not-a-date", null),
-            pageResultNode("a1", "Attachment", "attachment", "2025-03-03T00:00:00Z", null)
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).hasSize(1);
-        softly.assertThat(pages.get(0).pageId()).isEqualTo("p4");
-        softly.assertThat(pages.get(0).title()).isEqualTo("Untitled");
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_ReturnEmpty_When_ModifiedPagesNon200() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(500);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_ReturnEmpty_When_ModifiedPagesParseError() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{invalid");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_ReturnEmpty_When_ModifiedPagesRequestFailsExceptionally() {
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.failedFuture(new RuntimeException("boom")));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).join();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).isEmpty();
-        softly.assertAll();
-    }
-
-    // ---- Tests for modified attachments ----
-    @Test
-    void Should_ReturnModifiedAttachments_When_CqlReturnsResults() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        String json = createCqlModifiedAttachmentsJson(
-            pageResultNode("att1", "Invoice.pdf", "attachment", "2025-04-01T00:00:00Z", null),
-            pageResultNode("att2", null, "attachment", null, "2025-04-02T01:02:03Z")
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedAttachmentInfo> attachments = confluenceService
-            .getModifiedAttachmentsSince("TEST", Instant.parse("2025-03-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(attachments).hasSize(2);
-        softly.assertThat(attachments.get(0).attachmentId()).isEqualTo("att1");
-        softly.assertThat(attachments.get(0).title()).isEqualTo("Invoice.pdf");
-        softly.assertThat(attachments.get(0).lastModified()).isEqualTo(Instant.parse("2025-04-01T00:00:00Z"));
-        softly.assertThat(attachments.get(1).attachmentId()).isEqualTo("att2");
-        softly.assertThat(attachments.get(1).title()).isEqualTo("Unnamed");
-        softly.assertThat(attachments.get(1).lastModified()).isEqualTo(Instant.parse("2025-04-02T01:02:03Z"));
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_ReturnEmpty_When_ModifiedAttachmentsNon200() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(500);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedAttachmentInfo> attachments = confluenceService
-            .getModifiedAttachmentsSince("TEST", Instant.parse("2025-03-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(attachments).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_ReturnEmpty_When_ModifiedAttachmentsParseError() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        when(r.body()).thenReturn("{invalid");
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedAttachmentInfo> attachments = confluenceService
-            .getModifiedAttachmentsSince("TEST", Instant.parse("2025-03-01T00:00:00Z")).get();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(attachments).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_ReturnEmpty_When_ModifiedAttachmentsRequestFailsExceptionally() {
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.failedFuture(new RuntimeException("boom")));
-
-        List<ModifiedAttachmentInfo> attachments = confluenceService
-            .getModifiedAttachmentsSince("TEST", Instant.parse("2025-03-01T00:00:00Z")).join();
-
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(attachments).isEmpty();
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_LogErrorAndSkipEntry_When_DateParsingFails() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        
-        // Create JSON with invalid date format
-        String json = createCqlModifiedPagesJson(
-            pageResultNode("p1", "Valid Page", "page", "2025-01-02T03:04:05Z", null),
-            pageResultNode("p2", "Invalid Date Page", "page", "not-a-valid-date", null),
-            pageResultNode("p3", "Another Valid Page", "page", "2025-01-03T04:05:06Z", null)
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        // Should return only pages with valid dates, skipping the one with invalid date
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).hasSize(2);
-        softly.assertThat(pages.get(0).pageId()).isEqualTo("p1");
-        softly.assertThat(pages.get(0).title()).isEqualTo("Valid Page");
-        softly.assertThat(pages.get(0).lastModified()).isEqualTo(Instant.parse("2025-01-02T03:04:05Z"));
-        softly.assertThat(pages.get(1).pageId()).isEqualTo("p3");
-        softly.assertThat(pages.get(1).title()).isEqualTo("Another Valid Page");
-        softly.assertThat(pages.get(1).lastModified()).isEqualTo(Instant.parse("2025-01-03T04:05:06Z"));
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_LogErrorAndSkipAttachment_When_AttachmentDateParsingFails() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        
-        // Create JSON with invalid date format for attachments
-        String json = createCqlModifiedAttachmentsJson(
-            pageResultNode("att1", "Valid.pdf", "attachment", "2025-04-01T00:00:00Z", null),
-            pageResultNode("att2", "Invalid.pdf", "attachment", "invalid-date-format", null),
-            pageResultNode("att3", "Another Valid.pdf", "attachment", "2025-04-02T01:02:03Z", null)
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedAttachmentInfo> attachments = confluenceService
-            .getModifiedAttachmentsSince("TEST", Instant.parse("2025-03-01T00:00:00Z")).get();
-
-        // Should return only attachments with valid dates, skipping the one with invalid date
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(attachments).hasSize(2);
-        softly.assertThat(attachments.get(0).attachmentId()).isEqualTo("att1");
-        softly.assertThat(attachments.get(0).title()).isEqualTo("Valid.pdf");
-        softly.assertThat(attachments.get(0).lastModified()).isEqualTo(Instant.parse("2025-04-01T00:00:00Z"));
-        softly.assertThat(attachments.get(1).attachmentId()).isEqualTo("att3");
-        softly.assertThat(attachments.get(1).title()).isEqualTo("Another Valid.pdf");
-        softly.assertThat(attachments.get(1).lastModified()).isEqualTo(Instant.parse("2025-04-02T01:02:03Z"));
-        softly.assertAll();
-    }
-
-    @Test
-    void Should_UseHistoryFallback_When_VersionDateInvalid() throws Exception {
-        var r = mock(HttpResponse.class);
-        when(r.statusCode()).thenReturn(200);
-        
-        // Page with invalid version.when but valid history.lastUpdated.when
-        String json = createCqlModifiedPagesJson(
-            pageResultNode("p1", "Fallback Page", "page", "bad-format", "2025-02-01T10:00:00Z")
-        );
-        when(r.body()).thenReturn(json);
-        when(httpClient.sendAsync(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
-            .thenReturn(CompletableFuture.completedFuture(r));
-
-        List<ModifiedPageInfo> pages = confluenceService
-            .getModifiedPagesSince("TEST", Instant.parse("2025-01-01T00:00:00Z")).get();
-
-        // Should fallback to history date when version date is invalid
-        SoftAssertions softly = new SoftAssertions();
-        softly.assertThat(pages).hasSize(1);
-        softly.assertThat(pages.get(0).pageId()).isEqualTo("p1");
-        softly.assertThat(pages.get(0).lastModified()).isEqualTo(Instant.parse("2025-02-01T10:00:00Z"));
-        softly.assertAll();
     }
 }
